--- a/ike_styles.css
+++ b/ike_styles.css
@@ -3,7 +3,7 @@
 
 html {
 	background-color: black;	
-	zoom: 75%;
+	/* zoom: 75%; */
 }
 
 body {
@@ -217,23 +217,27 @@ border-radius: 3px;
     color: #555;
   }
   
-  .hidden-gallery {
-    display: none; /* Initially hide the gallery */
-    margin-top: 20px;
-    text-align: center;
+
+.hidden-gallery {
+    display: none;
+    margin: 20px auto;
+    max-width: 1200px;
+    /* display: flex; */
     flex-wrap: wrap;
     justify-content: center;
-  }
-
-  .hidden-gallery figure {
+    gap: 20px;
+}
+.hidden-gallery figure {
+    flex: 1 1 250px;
     max-width: 300px;
-    display: inline-block;
     margin: 10px;
+    text-align: center;
   }
+  
 
-  .hidden-gallery img {
+.hidden-gallery img {
     width: 100%;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
+}
