--- a/ike_styles.css
+++ b/ike_styles.css
@@ -13,6 +13,7 @@
     margin: auto;
     padding: 10px;
     margin-top: 0;
+    max-width: 1200px;
   }
   
   h1, h2, h3, h4, h5 {
@@ -154,7 +155,7 @@
     margin: 0;
   }
   
-  /* Gallery section */
+  /* Gallery section for climbing page */
   .gallery-container {
     max-width: 1600px;
     margin: auto;
@@ -170,7 +171,7 @@
   
   .album-item {
     flex: 1 1 250px;
-    max-width: 400px;
+    max-width: 300px;
     text-align: center;
     cursor: pointer;
   }
@@ -184,7 +185,7 @@
   }
   
   .album-item img:hover {
-    opacity: 0.8;
+    opacity: 0.5;
   }
   
   .album-item figcaption {
@@ -203,7 +204,7 @@
   }
   
   .hidden-gallery figure {
-    flex: 1 1 250px;
+    flex: 1 1 300px;
     max-width: 400px;
     margin: 10px;
     text-align: center;
